platform-engineering/projects/k8s-manifests/exercises1/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ex1-nginx
spec:
  podSelector:
    matchLabels:
      app: ex1-nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ex1-nginx
